<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BarCrawlr</string>
    <string name="Find_By_Location">Bars</string>
    <string name="Find_Events">Events</string>
    <string name="Panic_Pint">Panic Pint</string>
    <string name="Find_By_Beer">Beers</string>
    <string name="view_favorite_beers" />
    <string name="action_view_fav_bars">Favorite Bars</string>
    <string name="action_view_fav_beers">Favorite Beers</string>

    <string name="pref_user_key">pref_user</string>
    <string name="pref_searchby_key">pref_searchby</string>
    <string name="pref_searchby_title">Search By</string>
    <string name="pref_searchby_default">name</string>

    <string name="pref_zip_key">pref_zip</string>
    <string name="pref_zip_title">ZipCode</string>
    <string name="pref_zip_default">97330</string>


    <string name="title_activity_search_by_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="ok">ok</string>
    <string name="text_location_permission">Location</string>
    <string name="title_location_permission">Location</string>

</resources>
