<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ListPreference
        android:key="@string/pref_searchby_key"
        android:title="@string/pref_searchby_title"
        android:dialogTitle="@string/pref_searchby_title"
        android:summary="%s"
        android:entries="@array/pref_searchby_entries"
        android:entryValues="@array/pref_searchby_values"
        android:defaultValue="@string/pref_searchby_default" />

    <EditTextPreference
        android:key="@string/pref_zip_key"
        android:title="@string/pref_zip_title"
        android:dialogTitle="@string/pref_zip_title"
        android:summary="%s"
        android:defaultValue="@string/pref_zip_default" />
        />

</PreferenceScreen>