<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group5.com.barcrawlr.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="20dp"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="Search for"/>

    <Button
        android:id="@+id/FindByLocation"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:background="@android:color/white"
        android:text="@string/Find_By_Location"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:background="@android:color/white"
        android:text="@string/Find_By_Beer"
        android:id="@+id/FindByBeer"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textSize="22sp"
        android:background="@android:color/white"
        android:text="@string/Find_Events"
        android:id="@+id/FindByEvent"/>

</LinearLayout>
